fixed email div overflow

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -28,7 +28,10 @@
 
 .rwd-line {
   display: block;
+}
 
+.breaker {
+  word-wrap: break-word;
 }
 
 .email-link {
